--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moralis": "^2.18.4",
     "next": "^13.3.1",
     "next-auth": "^4.20.1",
+    "nft.storage": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "wagmi": "^0.9.2"
