--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-next": "^13.3.1",
     "ethers": "^5.6.9",
     "framer-motion": "^10",
+    "mime": "^3.0.0",
     "moralis": "^2.18.4",
     "next": "^13.3.1",
     "next-auth": "^4.20.1",
