--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-next": "^13.3.1",
     "ethers": "^5.6.9",
     "framer-motion": "^10",
+    "fs": "^0.0.1-security",
     "mime": "^3.0.0",
     "moralis": "^2.18.4",
     "next": "^13.3.1",
@@ -35,7 +36,8 @@
   },
   "devDependencies": {
     "@moralisweb3/eslint-config": "^1.0.1",
-    "@types/node": "18.16.0",
+    "@types/mime": "^3.0.1",
+    "@types/node": "^20.2.3",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
